--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -34,5 +34,5 @@ jobs:
       
       - name: Push package
         run: |
-          nuget sources add -name "GPR" -Source https://nuget.pkg.github.com/DoctorOnline/index.json -Username DoctorOnline -Password ${{ secrets.GITHUB_TOKEN }}
+          nuget sources add -name "GPR" -Source https://nuget.pkg.github.com/doctoronline/index.json -Username doctoronline -Password ${{ secrets.GITHUB_TOKEN }}
           nuget push **\*.nupkg -source "GPR"
